# album_splitter

./: .gitignore  README.md  pyproject.toml
album_splitter/: __init__.py  main.py  utils.py
tests/: __init__.py  debug.py  test_io.py
