[tool.poetry]
name = "album-splitter"
version = "0.1.0"
description = ""
authors = ["janphr"]
readme = "README.md"
packages = [{include = "album_splitter"}]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.2"
pydub = "^0.25.1"
shazamio = "^0.3.1.0"
scipy = "^1.9.3"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
splitter = "album_splitter.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
